# cycling_computer

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  requirements_lock.txt
apps/: BUILD.bazel  hello_world.cc
system/: BUILD.bazel  system.h
targets/host/: BUILD.bazel  system.cc
