bazel_dep(name = "pico-sdk", version = "1.6.0-rc1")
bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
  configure_coverage_tool = True,
  python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
  hub_name = "pip",
  requirements_lock = "//:requirements_lock.txt",
)
